--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
+/* COLORS PALETTE */
+:root{
+    --color-white: #ffffff;
+    --color-dark-text: #161012;
+    --color-dark-grey: #6b7376;
+    --color-text-grey: #b6bbc1;
+    --color-headers: #eaeaea;
+    --color-contact-hover: #e9ebeb;
+    --color-light-icons: #b1b1b1;
+    --color-sent-message: #d5f9ba;
+    --color-notifications: #8edafc;
+    --background: linear-gradient(180deg, #009688 18.55%, #D9DBD5 18.56%);
+}
+
 body{
     font-family: 'Lato', sans-serif;
 }
