--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,14 @@ body{
 .side-user{
     background-color: var(--color-headers);
 }
+.user-img img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+.icons-functions i{
+    color: var(--color-light-icons);
+}
 .side-notification{
     background-color: var(--color-notifications);
 }
